# OZ_3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
config/: urls.py
config/settings/: base.py  local.py  production.py
templates/: hello.html
templates/account/: account_detail.html  account_form.html  account_list.html
templates/accounts/: account_detail.html  account_form.html  account_list.html
templates/transaction_history/: transaction_history_form.html  transaction_history_list.html
transaction_history/: forms.py  models.py  views.py
transaction_history/migrations/: 0001_initial.py
users/: auth_backends.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_managers_remove_users_active_and_more.py  0003_remove_users_is_admin_alter_users_is_superuser.py
